Added game over music

--- a/HerosAndMostersGUI/Properties/Resources.resx
+++ b/HerosAndMostersGUI/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="BattleMusic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BattleMusic.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="gameOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gameOver.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="intro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\intro.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
